@@ -37,7 +37,7 @@ public interface SearchFileSet
 	/**
 	 * Returns the next file to search.
 	 * @param view The view performing the search
-	 * @param buffer The last file searched
+	 * @param path The last file searched
 	 */
 	String getNextFile(View view, String path);
 
